Bug#33474 - Change falcon_lock_timeout to falcon_lock_wait_timeout           - Change the setting from milliseconds to seconds. Bug#33072 - Set the default for falcon_lock_wait_timeout=50 seconds, like InnoDB. Document the flags better. Return timeout error in places where the deadlock error is returned.